# MetaUI

./: install.sh  meson.build  setup.sh
examples/: test.cpp
include/: metaui.hpp
include/metaui/: application.hpp  core.hpp  layouts.hpp  renderer.hpp  widget.hpp  widgets.hpp
metaui/: application.hpp  core.hpp  renderer.hpp  widget.hpp  widgets.hpp
src/: renderer_stb.cpp
